# tcfv2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
gdpr/: StringUtils.cpp  StringUtils.h  TCModel.cpp  TCModel.h  TCString.cpp  TCString.h
gdpr/encoder/: BitParser.cpp  BitParser.h  FieldEncoder.h  IntegerEncoder.cpp  IntegerEncoder.h
gdpr/field/: CmpId.h  CmpVersion.h  ConsentLanguage.cpp  ConsentLanguage.h  ConsentScreen.h  Created.cpp  Created.h  Field.cpp  Field.h  IsServiceSpecific.h  LastUpdated.cpp  LastUpdated.h  PublisherCC.h  PurposeOneTreatment.h  PurposesConsent.cpp  PurposesConsent.h  PurposesLITransparency.h  SpecialFeatureOptIns.cpp  SpecialFeatureOptIns.h  TcfPolicyVersion.h  UseNonStandardStacks.cpp  UseNonStandardStacks.h  VendorListVersion.h  Version.cpp  Version.h
gdpr/field/v2/: CmpId.cpp  CmpId.h  CmpVersion.cpp  CmpVersion.h  ConsentLanguage.h  ConsentScreen.cpp  ConsentScreen.h  Created.h  IsServiceSpecific.cpp  IsServiceSpecific.h  LastUpdated.h  PublisherCC.cpp  PublisherCC.h  PurposeOneTreatment.cpp  PurposeOneTreatment.h  PurposesConsent.h  PurposesLITransparency.cpp  PurposesLITransparency.h  SpecialFeatureOptIns.h  TcfPolicyVersion.cpp  TcfPolicyVersion.h  UseNonStandardStacks.h  Vendor.cpp  Vendor.h  VendorListVersion.cpp  VendorListVersion.h
gdpr/segment/: Core.cpp  Core.h  Segment.h
